[gd_scene load_steps=22 format=3 uid="uid://bky7hirsru46f"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7cii0"]
[ext_resource type="Texture2D" uid="uid://cprcas524dhbt" path="res://assets/Player/apple.png" id="1_w788x"]
[ext_resource type="PackedScene" uid="uid://dnrw33143k5c2" path="res://scenes/Weapons/sword_ability/sword.tscn" id="3_em1pk"]
[ext_resource type="PackedScene" uid="uid://bjdcaaumh0fhj" path="res://scenes/Utils/hurt_box.tscn" id="3_m30x5"]
[ext_resource type="Texture2D" uid="uid://c7wnglkox06uh" path="res://assets/Object/coin.png" id="5_cnse2"]
[ext_resource type="Texture2D" uid="uid://bq38uuoqahboy" path="res://assets/Icon/hp_bar.png" id="5_n86ik"]
[ext_resource type="PackedScene" uid="uid://by60aag4ff5ly" path="res://scenes/Utils/button.tscn" id="6_b0kyk"]
[ext_resource type="Texture2D" uid="uid://drj12skd22c7b" path="res://assets/Enemy/insuranceguy.png" id="6_s6ljq"]
[ext_resource type="PackedScene" uid="uid://b0r0h3qbro2im" path="res://scenes/Skill/Shoot/shoot_skill.tscn" id="8_16uom"]
[ext_resource type="PackedScene" uid="uid://otyaqrxusqei" path="res://scenes/Skill/Shoot/Projectile/bullet.tscn" id="9_h5qbh"]
[ext_resource type="Texture2D" uid="uid://n8y0hk7tyohu" path="res://assets/Weapons/Gun.png" id="10_kl1rj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w1jvf"]
atlas = ExtResource("1_w788x")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3wck"]
atlas = ExtResource("1_w788x")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w86oe"]
atlas = ExtResource("1_w788x")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0geq"]
atlas = ExtResource("1_w788x")
region = Rect2(0, 72, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rygh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1jvf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3wck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w86oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0geq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwelv"]
radius = 5.0111

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gnue"]
size = Vector2(9.33333, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_2rbc7"]
radius = 225.097

[sub_resource type="CircleShape2D" id="CircleShape2D_no48i"]
radius = 31.6947

[sub_resource type="CircleShape2D" id="CircleShape2D_osi8m"]
radius = 7.6956

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(3, 3)
motion_mode = 1
script = ExtResource("1_7cii0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rygh0")
animation = &"idle"

[node name="Weapon" type="Node2D" parent="AnimatedSprite2D"]

[node name="Sword" parent="AnimatedSprite2D/Weapon" instance=ExtResource("3_em1pk")]
position = Vector2(12, 0)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.333333, 3.66667)
shape = SubResource("CircleShape2D_nwelv")

[node name="HurtBox" parent="." instance=ExtResource("3_m30x5")]
collision_layer = 2
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.333333, 4)
shape = SubResource("RectangleShape2D_4gnue")

[node name="Attack" type="Node2D" parent="."]

[node name="JuiceBoxTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="JuiceBoxAttackTimer" type="Timer" parent="Attack/JuiceBoxTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_2rbc7")

[node name="Grab" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="GrabAreaCol" type="CollisionShape2D" parent="Grab"]
unique_name_in_owner = true
position = Vector2(0, 1.66667)
shape = SubResource("CircleShape2D_no48i")

[node name="Collect" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollectAreaCol" type="CollisionShape2D" parent="Collect"]
position = Vector2(0.666667, 3.66667)
shape = SubResource("CircleShape2D_osi8m")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="GUILayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.225
anchor_right = 0.6
anchor_bottom = 0.6
offset_left = 998.0
offset_top = -3.0
offset_right = 1038.0
offset_bottom = 37.0
texture = ExtResource("5_cnse2")
metadata/_edit_use_anchors_ = true

[node name="Coin" type="Label" parent="GUILayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1059.0
offset_top = 17.0
offset_right = 1127.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.996078, 1, 0, 1)
theme_override_font_sizes/font_size = 27
text = "####"

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.666667)
layout_mode = 0
offset_left = 536.0
offset_top = 368.0
offset_right = 616.0
offset_bottom = 389.0
value = 100.0
texture_progress = ExtResource("5_n86ik")

[node name="Store" type="Panel" parent="GUILayer/Control"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 1240.0
offset_top = 70.0
offset_right = 2115.0
offset_bottom = 580.0

[node name="Label" type="Label" parent="GUILayer/Control/Store"]
layout_mode = 0
offset_left = 236.0
offset_top = 35.0
offset_right = 631.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 40
text = "HEALTH INSURANCE"

[node name="TextureRect" type="TextureRect" parent="GUILayer/Control/Store"]
layout_mode = 0
offset_left = 627.0
offset_top = 285.0
offset_right = 812.0
offset_bottom = 509.0
texture = ExtResource("6_s6ljq")

[node name="Options" type="VBoxContainer" parent="GUILayer/Control/Store"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 89.0
offset_right = 631.0
offset_bottom = 442.0

[node name="CloseButton" parent="GUILayer/Control/Store" instance=ExtResource("6_b0kyk")]
layout_mode = 0
offset_left = 69.0
offset_top = 446.0
offset_right = 194.0
offset_bottom = 502.0
text = "CLOSE"

[node name="Death" type="Panel" parent="GUILayer/Control"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 140.0
offset_top = -700.0
offset_right = 1015.0
offset_bottom = -190.0

[node name="Result" type="Label" parent="GUILayer/Control/Death"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_top = 40.0
offset_right = 620.0
offset_bottom = 95.0
scale = Vector2(1.11926, 1.35124)
theme_override_font_sizes/font_size = 40
text = "RESULT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" parent="GUILayer/Control/Death" instance=ExtResource("6_b0kyk")]
layout_mode = 0
offset_left = 375.0
offset_top = 413.0
offset_right = 500.0
offset_bottom = 469.0
text = "MENU"

[node name="lost" type="AudioStreamPlayer2D" parent="GUILayer/Control/Death"]
unique_name_in_owner = true
position = Vector2(-140, 700)
scale = Vector2(3, 3)
volume_db = -10.0

[node name="win" type="AudioStreamPlayer2D" parent="GUILayer/Control/Death"]
unique_name_in_owner = true
position = Vector2(-140, 700)
scale = Vector2(3, 3)
volume_db = -10.0

[node name="LabelTimer" type="Label" parent="GUILayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 544.0
offset_top = 25.0
offset_right = 609.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 25
text = "00:00"

[node name="store_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
process_mode = 3
volume_db = -10.0

[node name="ShootSkill" parent="." instance=ExtResource("8_16uom")]
projectile_scene = ExtResource("9_h5qbh")

[node name="Gun" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Node2D" type="Node2D" parent="Gun"]

[node name="Sprite2D" type="Sprite2D" parent="Gun/Node2D"]
texture_filter = 1
position = Vector2(16.6667, 0.333333)
scale = Vector2(0.807292, 0.682292)
texture = ExtResource("10_kl1rj")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/JuiceBoxTimer" to="." method="_on_juice_box_timer_timeout"]
[connection signal="timeout" from="Attack/JuiceBoxTimer/JuiceBoxAttackTimer" to="." method="_on_juice_box_attack_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Grab" to="." method="_on_grab_area_entered"]
[connection signal="area_entered" from="Collect" to="." method="_on_collect_area_entered"]
[connection signal="click_end" from="GUILayer/Control/Store/CloseButton" to="." method="_on_close_button_click_end"]
[connection signal="click_end" from="GUILayer/Control/Death/Menu" to="." method="_on_menu_click_end"]

[editable path="HurtBox"]
